--- a/Awesome.Data.Sql.Builder.Test.Unit/Awesome.Data.Sql.Builder.Test.Unit.csproj
+++ b/Awesome.Data.Sql.Builder.Test.Unit/Awesome.Data.Sql.Builder.Test.Unit.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GivenJoinClause.cs" />
     <Compile Include="GivenSelectStatement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
