--- a/Awesome.Data.Sql.Builder/Awesome.Data.Sql.Builder.csproj
+++ b/Awesome.Data.Sql.Builder/Awesome.Data.Sql.Builder.csproj
@@ -42,12 +42,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OrderByClause.cs" />
-    <Compile Include="SelectStatement.cs" />
+    <Compile Include="FromClause.cs" />
+    <Compile Include="ISqlFragment.cs" />
+    <Compile Include="Select\FullJoin.cs" />
+    <Compile Include="Select\RightOuterJoin.cs" />
+    <Compile Include="Select\LeftOuterJoin.cs" />
+    <Compile Include="Select\InnerJoin.cs" />
+    <Compile Include="Select\JoinClause.cs" />
+    <Compile Include="Select\OrderByClause.cs" />
+    <Compile Include="Select\OuterJoin.cs" />
+    <Compile Include="Select\SelectStatement.cs" />
+    <Compile Include="SqlBuilderExtensions.cs" />
     <Compile Include="SqlStatement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlStatements.cs" />
+    <Compile Include="Properties\Strings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+    <Compile Include="TableClause.cs" />
     <Compile Include="WhereClause.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Strings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
