Adding UNION, INTERSECT, EXCEPT support for SELECT queries.

--- a/Awesome.Data.Sql.Builder.Test.Unit/Awesome.Data.Sql.Builder.Test.Unit.csproj
+++ b/Awesome.Data.Sql.Builder.Test.Unit/Awesome.Data.Sql.Builder.Test.Unit.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GivenSetOperations.cs" />
     <Compile Include="GivenFromClause.cs" />
     <Compile Include="GivenJoinClause.cs" />
     <Compile Include="GivenSelectStatement.cs" />
