--- a/.nuget/NuGet.Config
+++ b/.nuget/NuGet.Config
@@ -3,4 +3,14 @@
   <solution>
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
+  <config>
+    <add key="repositoryPath" value="..\packages" />
+  </config>
+  <packageRestore>
+    <!-- Allow NuGet to download missing packages -->
+    <add key="enabled" value="True" />
+
+    <!-- Automatically check for missing packages during build in Visual Studio -->
+    <add key="automatic" value="True" />
+  </packageRestore>
 </configuration>
