Basic refactor done. All rendering should be done in the renderer. "BuildSql" methods still exist for backwards compatibility.
Made basic SqlServer2012 implementation which does FETCH NEXT ROWS and OFFSET differently.

--- a/Awesome.Data.Sql.Builder.Test.Unit/Awesome.Data.Sql.Builder.Test.Unit.csproj
+++ b/Awesome.Data.Sql.Builder.Test.Unit/Awesome.Data.Sql.Builder.Test.Unit.csproj
@@ -68,6 +68,7 @@
     <Compile Include="GivenJoinClause.cs" />
     <Compile Include="GivenSelectStatement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderers\GivenSqlServer2012SqlRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Awesome.Data.Sql.Builder\Awesome.Data.Sql.Builder.csproj">
