--- a/Awesome.Data.Sql.Builder.OData/Awesome.Data.Sql.Builder.OData.nuspec
+++ b/Awesome.Data.Sql.Builder.OData/Awesome.Data.Sql.Builder.OData.nuspec
@@ -10,6 +10,9 @@
         <description>$description$</description>
         <licenseUrl>http://www.gnu.org/licenses/lgpl.html</licenseUrl>
         <projectUrl>https://github.com/cdroulers/awesome-sql-builder</projectUrl>
+        <dependencies>
+            <dependency id="Awesome.Data.Sql.Builder" version="1.1.0.0"/>
+        </dependencies>
     </metadata>
     <files />
 </package>
