--- a/Awesome.Data.Sql.Builder/Awesome.Data.Sql.Builder.csproj
+++ b/Awesome.Data.Sql.Builder/Awesome.Data.Sql.Builder.csproj
@@ -60,6 +60,7 @@
     </Compile>
     <Compile Include="FromClause.cs" />
     <Compile Include="IFromClause.cs" />
+    <Compile Include="Insert\InsertStatement.cs" />
     <Compile Include="ISqlFragment.cs" />
     <Compile Include="Renderers\DefaultSqlRenderer.cs" />
     <Compile Include="Renderers\ISqlRenderer.cs" />
