--- a/Awesome.Data.Sql.Builder/Awesome.Data.Sql.Builder.csproj
+++ b/Awesome.Data.Sql.Builder/Awesome.Data.Sql.Builder.csproj
@@ -10,10 +10,18 @@
     <RepositoryType>git</RepositoryType>
     <PackageLicenseUrl>http://www.gnu.org/licenses/lgpl.html</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/cdroulers/awesome-sql-builder</PackageProjectUrl>
+    <CodeAnalysisRuleSet>..\stylecop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="..\stylecop.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.4.1" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta008">
+      <PrivateAssets>All</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
