--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,9 @@ root = true
 end_of_line = CRLF
 indent_style = space
 indent_size = 4
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
 
 [*.xml]
 indent_size = 4
